Adding bootstrap and initial template

--- a/index.html
+++ b/index.html
@@ -51,10 +51,9 @@
                         Experienced game developer specializing in Unity and C#. Proven leader with a strong track record in creating high-quality applications for mobile and PC. Skilled in cross-disciplinary collaboration, tool development, and performance optimization. Passionate about delivering impactful digital experiences.
                     </p>
                     <div class="social-icons">
-                        <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/danielfib/"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://danielfib.itch.io/"><i class="fab fa-itch-io"></i></a>
+                        <a class="social-icon" href="https://github.com/Danielfib"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
             </section>
@@ -68,7 +67,7 @@
                             <h3 class="mb-0">Game Developer</h3>
                             <div class="subheading mb-3">Globant (Consultant to Zynga)</div>
                             <ul>
-                                <li>Developing and optimizing gameplay for Harry Potter: Puzzles and Spells using Unity.</li>
+                                <li>Developing and optimizing gameplay and live events for <i>Harry Potter: Puzzles and Spells</i> using Unity.</li>
                                 <li>Collaborating with a cross-functional team to deliver updates and enhance the game's performance, deploying across multiple platforms.</li>
                                 <li>Implementing features and troubleshooting issues to ensure a smooth user experience.</li>
                             </ul>
