--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">Daniel Filgueira</span>
-                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="..." /></span>
+                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profilePic.PNG" alt="..." /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -48,12 +48,18 @@
                         <a href="mailto:daniel.filgueira.b@email.com">daniel.filgueira.b@email.com</a>
                     </div>
                     <p class="lead mb-5">
-                        Experienced game developer specializing in Unity and C#. Proven leader with a strong track record in creating high-quality applications for mobile and PC. Skilled in cross-disciplinary collaboration, tool development, and performance optimization. Passionate about delivering impactful digital experiences.
+                        Hey there! <br>
+                        I am an experienced game developer specializing in Unity and C#. Proven leader with a strong track record in creating high-quality applications for mobile and PC. Skilled in cross-disciplinary collaboration, tool development, and performance optimization. Passionate about delivering impactful digital experiences.
                     </p>
                     <div class="social-icons">
-                        <a class="social-icon" href="https://www.linkedin.com/in/danielfib/"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="https://danielfib.itch.io/"><i class="fab fa-itch-io"></i></a>
-                        <a class="social-icon" href="https://github.com/Danielfib"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/danielfib/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://danielfib.itch.io/" target="_blank"><i class="fab fa-itch-io"></i></a>
+                        <a class="social-icon" href="https://github.com/Danielfib" target="_blank"><i class="fab fa-github"></i></a>
+                        <a class="downloadcv-anchor" href="assets/pdf/Daniel_Filgueira_Bezerra.pdf" target="_blank" download="Daniel_Filgueira_Bezerra">
+                            <button class="downloadcv" type="button">
+                                One-pager CV (98kb)
+                            </button>
+                        </a>
                     </div>
                 </div>
             </section>
