Setting up skills section

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <span class="text-primary">Filgueira</span>
                     </h1>
                     <div class="subheading mb-5">
-                        Rua Arnaldo Bastos, 56 · Recife, Brazil · +55 (81) 99956-9764·
+                        Recife, Brazil · +55 (81) 99956-9764·
                         <a href="mailto:daniel.filgueira.b@email.com">daniel.filgueira.b@email.com</a>
                     </div>
                     <p class="lead mb-5">
@@ -130,25 +130,35 @@
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-unity"></i></li>
+                        <li class="list-inline-item"><img src="assets/img/unity-brands-solid.svg" alt="Unity"></li>
+                        <li class="list-inline-item"><img src="assets/img/icons8-c-sharp-logo.svg" alt="CSharp"></li>
+                        <li class="list-inline-item"><img src="assets/img/unrealengine.svg" alt="Unreal"></li>
+                        <li class="list-inline-item"><img src="assets/img/icons8-c++.svg" alt="CPlusPlus"></li>
+                        <li class="list-inline-item"><img src="assets/img/godotengine.svg" alt="Godot"></li>
+                        <li class="list-inline-item"><img src="assets/img/git.svg" alt="Git"></li>
+                        <li class="list-inline-item"><img src="assets/img/jenkins.svg" alt="Jenkins"></li>
+                        <li class="list-inline-item"><img src="assets/img/jira.svg" alt="Jira"></li>
+                        <li class="list-inline-item"><img src="assets/img/clickup.svg" alt="ClickUp"></li>
+                        <li class="list-inline-item"><img src="assets/img/icons8-rider-jetbrains.svg" alt="Rider"></li>
+                        <li class="list-inline-item"><img src="assets/img/firebase.svg" alt="Firebase"></li>
                     </ul>
                     <div class="subheading mb-3">Workflow</div>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Mobile-First, Responsive Design
+                            <b>Development Cycles:</b> Iterative design, prototyping, testing, and optimization
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Browser Testing & Debugging
+                            <b>Team Collaboration:</b> Cross-functional team coordination with a focus on shared goals and innovation
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Functional Teams
+                            <b>Remote Work:</b> Extensive experience in remote team collaboration since 2020
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Agile Development & Scrum
+                            <b>Methodologies:</b> Proficient in Scrum and Kanban
                         </li>
                     </ul>
                 </div>
@@ -158,8 +168,8 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                    <p>I am passionate about storytelling, whether through games, books, movies, or series. As a longtime Dungeon Master in Dungeons & Dragons, I love crafting immersive narratives for my players and painting miniatures to bring those stories to life. I’m also an avid Magic: The Gathering and tabletop game enthusiast.</p>
+                    <p class="mb-0">Beyond gaming, I enjoy cooking for the people I love, finding joy in creating memorable meals and shared moments. My life revolves around creativity, strategy, and community—both at the table and beyond.</p>
                 </div>
             </section>
             <hr class="m-0" />
