--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Daniel Filgueira</title>
-        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="assets/img/gamepad-solid.svg" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -114,39 +114,49 @@
             <section class="resume-section" id="projects">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Projects</h2>
-                    <div class="subheading mb-5">
-                        Professional participation in released projects
-                    </div>
+                    <h3 class="mb-0" style="padding-bottom: 1rem;">Professional participation in released projects</h3>
                     <div class="row">
                         <div class="col-sm-4">
                             <div class="card">
-                                <!--<img src="..." class="card-img-top" alt="...">-->
+                                <img src="assets/img/hp_puzzles_thumbnail.jpg" class="card-img-top" alt="Game thumbnail">
                                 <div class="card-body">
                                     <h5 class="card-title">Harry Potter: Puzzles and Spells</h5>
                                     <p class="card-text">It’s time to experience the magic and mystery of Harry Potter like never before! Prepare to cast spells, outsmart challenges, and celebrate the wonder of the Wizarding World to solve incredible magical Match-3 puzzles for your mobile device!</p>
-                                    <a href="https://play.google.com/store/apps/details?id=com.zynga.pottermatch&hl=en" target="_blank"> <p class="card-text"><small class="text-muted">Check it out!</small></p> </a>
+                                    <a href="https://play.google.com/store/apps/details?id=com.zynga.pottermatch&hl=en" target="_blank"> <p class="card-text"><small class="text-muted">
+                                        <button class="project-card-btn" type="button">
+                                            Check it out!
+                                        </button>
+                                    </small></p> </a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-sm-4">
                             <div class="card">
-                                <!--<img src="..." class="card-img-top" alt="...">-->
+                                <img src="assets/img/dq2_thumbnail.jpg" class="card-img-top" alt="Game thumbnail">
                                 <div class="card-body">
                                     <h5 class="card-title">DinoQuest 2</h5>
                                     <p class="card-text">
                                         Grab a shovel, it’s dino time! Enjoy this dinosaur fossils discovery experience, and build your museum on Dino Quest 2!<br>
                                         Let’s embark on a fantastic expedition to find some dinos! Dig up fossils, complete skeletons to discover new dinosaur species, and hunt for prehistoric animal discoveries to attract many visitors to your fossils museum.</p>
-                                    <a href="https://play.google.com/store/apps/details?id=com.tapps.games.dig.dinoquest2&hl=en" target="_blank"> <p class="card-text"><small class="text-muted">Check it out!</small></p> </a>
+                                    <a href="https://play.google.com/store/apps/details?id=com.tapps.games.dig.dinoquest2&hl=en" target="_blank"> <p class="card-text"><small class="text-muted">
+                                        <button class="project-card-btn" type="button">
+                                            Check it out!
+                                        </button>
+                                    </small></p> </a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-sm-4">
                             <div class="card">
-                                <!--<img src="..." class="card-img-top" alt="...">-->
+                                <img src="assets/img/cs_thumbnail.jpg" class="card-img-top" alt="Game thumbnail">
                                 <div class="card-body">
                                     <h5 class="card-title">Cult Summoner</h5>
                                     <p class="card-text">Experience the twisted and chilling realm of Cult Summoner, a haunting roguelike autobattler that will send shivers down your spine. Command a legion of eerie creatures in this dark domain as you test your strategic prowess and dominate the harrowing summoners war.</p>
-                                    <a href="https://play.google.com/store/apps/details?id=br.com.tapps.cult.summoner&hl=en" target="_blank"> <p class="card-text"><small class="text-muted">Check it out!</small></p> </a>
+                                    <a href="https://play.google.com/store/apps/details?id=br.com.tapps.cult.summoner&hl=en" target="_blank"> <p class="card-text"><small class="text-muted">
+                                        <button class="project-card-btn" type="button">
+                                            Check it out!
+                                        </button>
+                                    </small></p> </a>
                                 </div>
                             </div>
                         </div>
@@ -154,64 +164,82 @@
                     <div class="row" style="margin-top: 1rem;">
                         <div class="col-sm-4">
                             <div class="card">
-                                <!--<img src="..." class="card-img-top" alt="...">-->
+                                <img src="assets/img/psf_thumbnail.jpg" class="card-img-top" alt="Game thumbnail">
                                 <div class="card-body">
                                     <h5 class="card-title">Pet Shop Fever</h5>
                                     <p class="card-text">Welcome to Pet Shop Fever: the frenzy animal hotel where every second counts!
                                         Your mission is clear: take care of pets while ensuring your customers leave with smiles on their faces. The clock is ticking. Are you ready to join us?
-                                    <a href="https://play.google.com/store/apps/details?id=com.tapps.virtual.pet.hotel.games.world&hl=en" target="_blank"> <p class="card-text"><small class="text-muted">Check it out!</small></p> </a>
+                                    <a href="https://play.google.com/store/apps/details?id=com.tapps.virtual.pet.hotel.games.world&hl=en" target="_blank"> <p class="card-text"><small class="text-muted">
+                                        <button class="project-card-btn" type="button">
+                                            Check it out!
+                                        </button>
+                                    </small></p> </a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-sm-4">
                             <div class="card">
-                                <!--<img src="..." class="card-img-top" alt="...">-->
+                                <img src="assets/img/sp_thumbnail.png" class="card-img-top" alt="App thumbnail">
                                 <div class="card-body">
                                     <h5 class="card-title">Samsung's Studio Plus</h5>
                                     <p class="card-text">Create and edit videos quickly and easily with Samsung Studio Plus. It is easy to use and intuitive.</p>
-                                    <a href="https://apps.microsoft.com/detail/9plpf77d2r18?hl=en-US&gl=US" target="_blank"> <p class="card-text"><small class="text-muted">Check it out!</small></p> </a>
+                                    <a href="https://apps.microsoft.com/detail/9plpf77d2r18?hl=en-US&gl=US" target="_blank"> <p class="card-text"><small class="text-muted">
+                                        <button class="project-card-btn" type="button">
+                                            Check it out!
+                                        </button>
+                                    </small></p> </a>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="subheading mb-5" style="margin-top: 2rem; margin-bottom: 0;">
-                        Personal projects
-                    </div>
+                    <h3 class="mb-0" style="padding-bottom: 1rem; padding-top: 3rem;">Personal projects</h3>
                     <div class="row">
                         <div class="col-sm-4">
                             <div class="card">
-                                <!--<img src="..." class="card-img-top" alt="...">-->
+                                <img src="assets/img/ms_thumbnail.jpg" class="card-img-top" alt="Tool thumbnail">
                                 <div class="card-body">
                                     <h5 class="card-title">My Soundtrack</h5>
                                     <p class="card-text">MySoundtrack enables Unity game developers to implement a soundtrack based on the game's situations and using tracks from player Spotify!
                                         That way, the player can listen to his musics, guided by the moments of the game.</p>
-                                        <a href="https://assetstore.unity.com/packages/audio/music/mysoundtrack-197430" target="_blank"> <p class="card-text"><small class="text-muted">Check it out!</small></p> </a>
+                                        <a href="https://assetstore.unity.com/packages/audio/music/mysoundtrack-197430" target="_blank"> <p class="card-text"><small class="text-muted">
+                                            <button class="project-card-btn" type="button">
+                                                Check it out!
+                                            </button>
+                                        </small></p> </a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-sm-4">
                             <div class="card">
-                                <!--<img src="..." class="card-img-top" alt="...">-->
+                                <img src="assets/img/tg_thumbnail.png" class="card-img-top" alt="Game thumbnail">
                                 <div class="card-body">
                                     <h5 class="card-title">To Grow</h5>
                                     <p class="card-text">In this sidescroller, you play as a patient who is in a regression therapy session. You go through challenges of your past, and as you make mistakes, they rewind to a few seconds before you made it.
                                         <br>To Grow got ranked 4th between 1818 entries in Brackeys Jam 2020.2</p>
-                                    <a href="https://danielfib.itch.io/to-grow" target="_blank"> <p class="card-text"><small class="text-muted">Check it out!</small></p> </a>
+                                    <a href="https://danielfib.itch.io/to-grow" target="_blank"> <p class="card-text"><small class="text-muted">
+                                        <button class="project-card-btn" type="button">
+                                            Check it out!
+                                        </button>
+                                    </small></p> </a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-sm-4">
                             <div class="card">
-                                <!--<img src="..." class="card-img-top" alt="...">-->
+                                <img src="assets/img/sv_thumbnail.png" class="card-img-top" alt="Project thumbnail">
                                 <div class="card-body">
                                     <h5 class="card-title">Song Verse</h5>
                                     <p class="card-text">An instrument the size of the Universe.
                                         Songverse is a VR experience where the player may compose music while immersed in a universe-creation metaphor. It is possible to manipulate planets and their satellites to choose predefined sounds. Combine and build them to shape soundtacks that echo through all space!</p>
-                                    <a href="https://journals-sol.sbc.org.br/index.php/jis/article/view/749" target="_blank"> <p class="card-text"><small class="text-muted">Check it out!</small></p> </a>
+                                    <a href="https://journals-sol.sbc.org.br/index.php/jis/article/view/749" target="_blank"> <p class="card-text"><small class="text-muted">
+                                        <button class="project-card-btn" type="button">
+                                            Check it out!
+                                        </button>
+                                    </small></p> </a>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-4">
+                        <div class="col-sm-4" style="margin-top: 8px;">
                             <div class="card" style="border-style: dashed;">
                                 <div class="card-body">
                                     <h5 class="card-title">More coming up!</h5>
